# about

./: Cargo.toml  Makefile  README.md
resources/: 0001.svgp  0002.svgp  0003.svgp  0004.svgp  0005.svgp  0006.svgp  0007.svgp  0008.svgp  0009.svgp  0010.svgp  0011.svgp  0012.svgp  0013.svgp  0014.svgp  0015.svgp  0016.svgp  0017.svgp  0018.svgp  0019.svgp  0020.svgp  0021.svgp  0022.svgp  0023.svgp  0024.svgp  0025.svgp  0026.svgp  0027.svgp  0028.svgp  0029.svgp  0030.svgp  0031.svgp  0032.svgp  0033.svgp  0034.svgp  0035.svgp  0036.svgp  0037.svgp  0038.svgp  0039.svgp  0040.svgp  (+142 more)
src/: consts.rs  gen_resources.py  main.rs  renderer.rs
src/consts/: svgs.rs
