[package]
name = "MFEKabout"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { version = "0.13.0" }
skulpin-renderer = "0.13.0"
sdl2 = { version = ">=0.34", features = ["bundled", "static-link", "raw-window-handle"] }
# Logging
log = "0.4.11"
env_logger = "0.8.3"
# SVG
lazy_static = "1.4"
image = { version = "0.23", features = ["png"], default-features = false }

## MFEK crates
mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
