[package]
name = "MFEKabout"
version = "0.1.0-beta3"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { git = "https://github.com/MFEK/skulpin.rlib" }
skulpin-renderer = { git = "https://github.com/MFEK/skulpin.rlib" }
sdl2 = { version = "0.35", features = ["raw-window-handle"] }
# Logging
log = "0.4"
env_logger = "0.8"
# SVG
lazy_static = "1.4"
image = { version = "0.23", features = ["png"], default-features = false }

## MFEK crates
mfek-ipc = { git = "https://github.com/MFEK/ipc.rlib" }

[features]
default = []
sdl2-static = ["sdl2/bundled", "sdl2/static-link"]
sdl2-dynamic = []
reproducible-build = ["mfek-ipc/reproducible-build"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
